# week-sound

./: .gitignore  CMakeLists.txt  README.md
config/: week-sound.conf
docs/plans/: 2026-03-19-usb-soundcard-anti-sleep-design.md  implementation-plan.md
scripts/: install-service.bat  install-service.sh  uninstall-service.bat  uninstall-service.sh
src/: audio_player.cpp  audio_player.h  config.cpp  config.h  logger.cpp  logger.h  main.cpp  service_linux.cpp  service_windows.cpp
